export class Node {
    constructor(public name: string, public x: number, public y: number, public z: number) {
        
    }
}